# book_club

./: .gitignore  DATABASE_OPTIMIZATIONS_COMPLETED.md  DOCUMENTATION.md  LICENSE  PROJECT_ASSESSMENT.md  PROJECT_DOCUMENTATION.md  README.md  SECURITY_FIXES_COMPLETED.md  TOKEN_STORAGE_XSS_PROTECTION.md  sample_book.txt  tasks_to_implement.md
backend/: .env  .env.example  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
backend/book_api/: settings.py  urls.py
backend/bookapp/: admin.py  admin.py.bak  apps.py  auth_views.py  content_moderation.py  epub_handler.py  middleware.py  models.py  models.py.bak  needed_functions.py  serializers.py  signals.py  urls.py  validators.py  views.py  views.py.bak
backend/bookapp/migrations/: 0001_initial.py  0002_add_character_offset.py  0002_alter_book_category.py  0002_auto_20260213_1616.py  0002_book_description.py  0002_bookcomment.py  0002_hashtag_book_hashtags.py  0003_alter_bookcomment_reading_group_and_more.py  0003_readinggroup.py  0003_readinggroup_featured_image_readinggroup_user_and_more.py  0003_remove_current_page_total_pages.py  0003_remove_readingprogress_current_page_and_more.py  0004_add_comment_replies.py  0004_alter_readinggroup_options_and_more.py  0004_alter_readinggroup_user.py  0004_book_book_author.py  0005_alter_book_book_author_alter_book_category.py  0005_alter_book_slug_alter_readinggroup_slug.py  0005_alter_readinggroup_options.py  0006_readinggroup_description.py  0006_remove_quest_is_active_alter_book_epub_file_and_more.py  0006_transliterate_slugs.py  0007_questtemplate.py  (+2 more)
(+111 files in other folders)
